Update LineBreakMeasurer.java